make the sidebar/footer normal: each button of sidebar align center horizontally and span 100%; the selected button in the sidebar will show a different states; the page footer is fixed to the bottom of the page

--- a/static/css/query_style.css
+++ b/static/css/query_style.css
@@ -212,7 +212,6 @@ body {
 #query footer {
     position: fixed;
     bottom: 0;
-    left: 0;
     background: white;
     height: 60px;
     line-height: 60px;
